mudando versão java para 11 e add jacoco