@@ -11,6 +11,8 @@ import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 
+import static java.util.stream.Collectors.toList;
+
 @RequiredArgsConstructor
 @Component
 public class SessaoConverter {
@@ -38,7 +40,7 @@ public class SessaoConverter {
     public List<SessaoResponseDTO> toListResponseDto(List<SessaoEntity> entities) {
         return entities.stream()
                 .map(this::toResponseDto)
-                .toList();
+                .collect(toList());
     }
 
 }
